# gesture-control-robot

./: .gitignore  LICENSE  README.md  cnn.py  main.py  requirements.txt  setupDataset.sh
model/: __init__.py  cnn.py  config.py  imageCapture.py  loader.py  main.py  train.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/robotic_arm_gazebo/lib/robotic_arm_gazebo/: control_node
ros2_ws/install/robotic_arm_gazebo/share/robotic_arm_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/robotic_arm_gazebo/share/robotic_arm_gazebo/urdf/: robotic_arm.urdf.xacro
ros2_ws/log/: latest_build
ros2_ws/src/arm_package/: package.xml  setup.py
ros2_ws/src/arm_package/arm_package/: arm_movement.py
ros2_ws/src/arm_sim/arm_bringup/: package.xml  setup.py
ros2_ws/src/arm_sim/arm_gazebo/: package.xml  setup.py
ros2_ws/src/arm_sim/arm_moveit_config/: package.xml  setup.cfg  setup.py
ros2_ws/src/arm_sim/arm_system_tests/: package.xml  setup.cfg  setup.py
ros2_ws/src/robotic_arm_gazebo/: package.xml  setup.cfg  setup.py
ros2_ws/src/robotic_arm_gazebo/launch/: spawn_robot.launch  spawn_robot.launch.py
