<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotic_arm_gazebo</name>
  <version>0.0.0</version>
  <description>ROS2 package for a robotic arm sim in gazebo</description>
  <maintainer email="fadimostefai@gmail.com">fadi</maintainer>
  <license>Apache Licence 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>ros2_control</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
